--- a/Client_Page.html
+++ b/Client_Page.html
@@ -4,22 +4,34 @@
   <title>Client_Page</title>
 </head>
 <body>
-    <label for="name">Name</label> <br>
-  <input id="name" placeholder="Name"><br><br>
-    <label for="email">Email</label> <br>
-  <input id="email" placeholder="Email"><br><br>
+    <label for="name">Name</label> 
+    <span class = "text-danger">*</span>
+    <br>
+  <input id="name" placeholder="Name">
+  <span class = "text-danger"> (3 to 100 characters)</span>
+  <br><br>
+    <label for="email">Email</label> 
+    <span class = "text-danger">*</span>
+    <br>
+  <input id="email" placeholder="Email">
+  <span class = "text-danger"> (must contain '@' and '.')</span>
+  <br><br>
     <label for="mobile">Mobile</label> <br>
   <input id="mobile" placeholder="Mobile (12 digits)"><br><br>
-    <label for="address">Address</label> <br>
+    <label for="address">Address</label>
+    <span class = "text-danger">*</span> <br>
   <textarea id="address" placeholder="Address (optional)"></textarea><br><br>
-  
+
   <button onclick="validate()">Submit</button>
 
   <script>
     function validate() {
-      let name = document.getElementById("name").value.trim();
+      let name = document.getElementById("name").value.trim(); 
+
       let email = document.getElementById("email").value.trim();
+
       let mobile = document.getElementById("mobile").value.trim();
+      
       let address = document.getElementById("address").value.trim();
 
       // Name 
